# agentool

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Makefile  README.md  app_v2.py  pyproject.toml
docs/: AGENT_RESULT.md  CRAFTING_AGENTOOLS.md  DATA_FLOW_REQUIREMENTS.md  DIAGRAMS.md  GRAPHTOOLKIT_DEVELOPER_GUIDE.md  GRAPHTOOLKIT_STATE_PATTERNS_ANALYSIS.md  GRAPH_ARCHITECTURE.md  GRAPH_TYPE_DEFINITIONS.md  NODE_CATALOG.md  PYDANTIC_GRAPH_STATE_PATTERNS.md  README.md  STATE_MUTATIONS.md  agentool_dependency_injection.md  api-reference.md  architecture.md  foundational-agentoolkits.md  graph-pydantic-ai.md  index.md  injector-shortcuts.md  integration-guide.md  rag-system.md  testing-guide.md  usage-examples.md  workflow-graph-system.md
docs/agentoolkits/: README.md  agentool.md  auth.md  config.md  crypto.md  http.md  llm.md  logging.md  metrics.md  playwright.md  queue.md  scheduler.md  session.md  storage-fs.md  storage-kv.md  templates.md
examples/: advanced_examples.py  api_documentation_research.py  basic_usage.py  demo_agentoolkit.py  graphtoolkit_smoke.py  multi_agentool_clean.py  multi_agentool_interop.py  real_research_demo.py
examples/agents/: __init__.py  storage.py
examples/demos/: __init__.py  calculator_agentool.py  calculator_decorated.py  calculator_single_file.py
examples/schemas/: __init__.py  storage.py
examples/tools/: __init__.py  storage.py
src/agentool/: README.md  __init__.py  base.py  factory.py
src/agentool.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/agentool/core/: __init__.py  injector.py  manager.py  model.py  registry.py
src/agentoolkit/: __init__.py
src/agentoolkit/auth/: __init__.py  auth.py  session.py
src/agentoolkit/graph/: __init__.py  rag_graph.py
src/agentoolkit/llm/: __init__.py  conductor_models.py  content_extractor.py  llm.py  markdown_generator.py  research_conductor.py  research_models.py  research_orchestrator.py
src/agentoolkit/management/: __init__.py  agentool.py
src/agentoolkit/network/: __init__.py  http.py
src/agentoolkit/observability/: __init__.py  metrics.py
src/agentoolkit/others/: __init__.py
src/agentoolkit/playwright/: __init__.py  browser_manager.py  element_interactor.py  page_navigator.py
src/agentoolkit/rag/: __init__.py  embedder.py  retriever.py
src/agentoolkit/security/: __init__.py  crypto.py
src/agentoolkit/storage/: __init__.py  document.py  fs.py  kv.py  vector.py
src/agentoolkit/system/: __init__.py  config.py  logging.py  queue.py  scheduler.py  templates.py
src/agentoolkit/workflows/: __init__.py  workflow_analyzer.py  workflow_crafter.py  workflow_evaluator.py  workflow_specifier.py  workflow_test_analyzer.py  workflow_test_crafter.py  workflow_test_stubber.py
src/agents/: __init__.py  analyzer_agent.py  base.py  crafter_agent.py  evaluator_agent.py  models.py  rag_agent.py  specification_agent.py  workflow.py
src/graphtoolkit/: PLAN.md  README.md  __init__.py  exceptions.py
src/graphtoolkit/core/: __init__.py  deps.py  executor.py  factory.py  initialization.py  metrics.py  persistence.py  registry.py  types.py
src/graphtoolkit/domains/: __init__.py  agentool.py  agentoolkit.py  api.py  blockchain.py  documentation.py  smoke.py  testsuite.py  workflow.py
src/graphtoolkit/nodes/: __init__.py  base.py  generic.py  iteration.py
src/graphtoolkit/state/: __init__.py  mutations.py  persistence.py
src/templates/: answer_synthesizer.j2  markdown_technical_guide.jinja  query_refiner.j2  rag_system.j2  reranker.j2
src/templates/prompts/: analyze_catalog.jinja  content_aggregator.jinja  create_specification.jinja  create_test_stub.jinja  evaluate_code.jinja  extract_documentation.jinja  implement_tests.jinja  query_refiner.jinja  report_generator.jinja  research_executor.jinja  research_planner.jinja  search_term_generator.jinja  url_filter.jinja
src/templates/skeletons/: agentool_comprehensive.jinja  test_comprehensive.jinja
src/templates/system/: analyzer.jinja  content_aggregator.jinja  crafter.jinja  documentation_extractor.jinja  evaluator.jinja  query_refiner.jinja  report_generator.jinja  research_executor.jinja  research_planner.jinja  search_term_generator.jinja  specification.jinja  test_crafter.jinja  test_designer.jinja  test_executor.jinja  test_generator.jinja  test_stubber.jinja  url_filter.jinja
src/ui/: README.md  __init__.py  stream_handlers.py  test_ui.py  workflow_runner.py  workflow_ui.py  workflow_ui_v2.py
src/ui/components/: __init__.py  artifact_viewer.py  artifact_viewer_v2.py  code_editor.py  container_manager.py  live_feed.py  metrics_dashboard.py  phase_executor.py  phase_executor_v2.py  progress_tracker.py  theme_manager.py  workflow_viewer.py  workflow_viewer_v2.py
src/ui/utils/: __init__.py  formatting.py  fragments.py  (+1 more)
templates/: markdown_api_docs.jinja  markdown_comparison_report.jinja  markdown_trend_analysis.jinja  test_hello.jinja
templates/drafts/: prompt_create_specification.jinja  system_analyze_catalog.jinja  system_create_specification.jinja
tests/: conftest.py  test_agentool.py  test_agentool_async_sync.py  test_agentool_edge_cases.py  test_agentool_management.py  test_agentool_registry.py  test_agentool_with_agent_integration.py
tests/agentoolkit/: __init__.py  test_auth.py  test_config.py  test_content_extractor.py  test_crypto.py  test_graph_rag.py  test_http.py  test_llm.py  test_logging.py  test_markdown_generator.py  test_metrics.py  test_playwright.py  test_queue.py  test_rag_embedder.py  test_rag_retriever.py  test_research_orchestrator.py  test_scheduler.py  test_session.py  test_storage_document.py  test_storage_fs.py  test_storage_kv.py  test_storage_vector.py  test_templates.py  test_workflow_analyzer.py
tests/graphtoolkit/: README.md  __init__.py  test_agentoolkit_domain.py  test_atomic_nodes.py  test_domain_agentool.py  test_domain_testsuite.py  test_graphtoolkit_init.py  test_helpers.py  test_initialization.py  test_quality_gates.py  test_smoke_e2e.py  test_state_management.py  test_workflow_execution.py
tests/workflows/: test_workflow_analyzer.py
(+82 files in other folders)
